# next-meeting-for-cosmic

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  cargo-sources.json  com.dangrover.next-meeting-app.json  justfile
.github/workflows/: ci.yml  flatpak-repo.yml  release.yml
debian/: changelog  control  copyright  rules
i18n/en/: cosmic_ext_applet_next_meeting.ftl  cosmic_next_meeting.ftl  meeting.ftl
i18n/fi/: cosmic_next_meeting.ftl
i18n/lt/: cosmic_next_meeting.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  calendar.rs  config.rs  formatting.rs  i18n.rs  main.rs  widgets.rs
