[package]
name = "cosmic-next-meeting"
version = "0.10.0"
edition = "2024"
authors = ["Dan Grover"]
license = "GPL-3.0-only"
description = "Show next meeting in cosmic panel or dock"
repository = "https://github.com/dangrover/cosmic-next-meeting"

[[bin]]
name = "cosmic-next-meeting"
path = "src/main.rs"

[[bin]]
name = "debug_calendars"
path = "src/bin/debug_calendars.rs"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["full"] }
zbus = { version = "3.14", features = ["tokio", "xml"] }
ical = "0.8"
chrono = "0.4"
rrule = "0.14"
serde = { version = "1.0", features = ["derive"] }
regex = "1"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
